<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:columnCount="1"
    android:rowCount="3"
    android:orientation="vertical"
    android:weightSum="1">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/toppingsOne">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:id="@+id/toppingsRow1"></TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toppingsOne"
        android:layout_centerHorizontal="true"
        android:id="@+id/toppingsTwo">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:id="@+id/toppingsRow2"></TableRow>
    </TableLayout>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/wholePizza"
        android:src="@mipmap/pizza"
        android:contentDescription="@string/whole_pizza"
        android:layout_above="@+id/toppingsBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_toppings"
        android:id="@+id/addToppingButton"
        android:layout_alignBottom="@+id/clearButton"
        android:layout_alignEnd="@+id/wholePizza"
        android:layout_marginEnd="122dp"
        android:onClick="addToppings"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/clearButton"
        android:layout_above="@+id/checkoutButton"
        android:layout_alignStart="@+id/wholePizza"
        android:layout_marginStart="121dp"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="125dp"
        android:onClick="clearPizza"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:id="@+id/checkoutButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="checkOut"/>


    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toppingsBar"
        android:layout_above="@+id/addToppingButton"
        android:layout_centerHorizontal="true"
        android:indeterminate="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery"
        android:id="@+id/deliveryBox"
        android:layout_above="@+id/toppingsBar"
        android:layout_alignParentStart="true"
        android:checked="true"/>

</RelativeLayout>